# RaspberryPi4LedLaboratory

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cxx-deps/: CMakeLists.txt
cxx-deps/c-periphery/: CMakeLists.txt
package/led-project/: Config.in  led-project.mk
scripts/actions/: apply_clang_format.bash
scripts/utils/: helpers.bash  pretty_print.bash
src/: gpio_wrapper.hpp  led_controller.cpp  led_controller.hpp
