MESSAGE(STATUS "Adding all dependencies")

# ------------------------------------------------------------------------------ #
#  Add all dependencies to the project
# ------------------------------------------------------------------------------ #

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/c-periphery)
